Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29320

FakeVim fails to map ö,ä and å keys

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 12.0.0
    • Qt Creator 10.0.2
    • FakeVim
    • None
    • Windows
    • 418482b3e (master)

    Description

      I have done following mappings in my vimrc:

      imap å <ESC>
      map ä $
      map ö 0
      imap ö {
      imap ä }
      imap Ö [
      imap Ä ] 

      None of these work. However if I run

      :imap å <ESC>

      after Qt Creator has launched, it works.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            jaakkko Jaakko Leinonen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes