FakeVim: Assume UTF-8 for source also on Windows by default

... but make it configurable.

Fixes: QTCREATORBUG-29320
Change-Id: Ib377c78e51afb7d06167c66306250a281aa9279c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>