src/plugins/fakevim/fakevimactions.cpp
@@ -94,6 +94,7 @@ FakeVimSettings::FakeVimSettings()
     setup(&showCmd,        true,  "ShowCmd",        "sc",  Tr::tr("Show partial command"));
     setup(&relativeNumber, false, "RelativeNumber", "rnu", Tr::tr("Show line numbers relative to cursor"));
     setup(&blinkingCursor, false, "BlinkingCursor", "bc",  Tr::tr("Blinking cursor"));
+    setup(&systemEncoding, false, "SystemEncoding", {},    Tr::tr("Use system encoding for :source"));
     setup(&scrollOff,      0,     "ScrollOff",      "so",  Tr::tr("Scroll offset:"));
     setup(&backspace,      "indent,eol,start",
                                   "Backspace",      "bs",  Tr::tr("Backspace:"));
@@ -149,7 +150,8 @@ FakeVimSettings::FakeVimSettings()
                 showCmd,
                 startOfLine,
                 passKeys,
-                blinkingCursor
+                blinkingCursor,
+                HostOsInfo::isWindowsHost() ? LayoutItem(systemEncoding) : empty
             },
             Column {
                 incSearch,
