src/plugins/fakevim/fakevimactions.h
@@ -151,6 +151,7 @@ public:
     FvBoolAspect emulateSurround;
 
     FvBoolAspect blinkingCursor;
+    FvBoolAspect systemEncoding;
 
 private:
     void setup(FvBaseAspect *aspect, const QVariant &value,
